# Myosis

./: CIgnore.txt  CMakeLists.txt  index.c  main.my
src/ast/ast_dec/: ast_dec.h
src/ast/create_ast/: create_ast.c  create_ast.h
src/ast/func_dec/: func_dec.h
src/ast/function_call/: function_call.h
src/ast/var_dec/: var_dec.h
src/eval_exp/: eval_exp.c  eval_exp.h
src/symb_table/: symb_table.c  symb_table.h
src/tokenise/: tokenise.c  tokenise.h
src/tokens/: token_type.c  token_type.h
util/token_to_string/: token_to_string.c  token_to_string.h
